--- a/web422-a4/src/app/new-releases/new-releases.component.html
+++ b/web422-a4/src/app/new-releases/new-releases.component.html
@@ -1,1 +1,30 @@
-<p>new-releases works!</p>
+<h1>New Releases</h1>
+<p>
+  The following is a list of new releases.<br>
+  Click the <strong>album cover</strong> or <strong>artist name</strong> for more information.<br><br>
+</p>
+<div class="content">
+  <div fxLayout="row wrap" fxLayout.xs="column">
+    <!-- Single "Responsive" Card-->
+    <div fxFlex [style.margin]="'20px'" *ngFor="let album of releases">
+      <mat-card [style.min-width]="'200px'">
+        <mat-card-header>
+          <mat-card-title>{{album.name}}</mat-card-title>
+          <mat-card-subtitle>New Release</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image class="album-cover" [src]="album.images[0].url" alt="album art" 
+          routerLink="/album" routerLinkActive="active">
+        <strong>Release Date: </strong>{{album.release_date}}<br />
+        <strong>Tracks: </strong>{{album.total_tracks}}<br /><br />
+        <mat-card-content>
+          <mat-chip-list aria-label="Artist selection">
+            <mat-chip *ngFor="let artist of album.artists"
+              routerLink="/artist" routerLinkActive="active">{{artist.name}}</mat-chip>
+          </mat-chip-list>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <!-- -->
+
+  </div>
+</div>
