--- a/web422-a4/src/app/app.component.html
+++ b/web422-a4/src/app/app.component.html
@@ -75,7 +75,7 @@
     <mat-sidenav-content class="sidenav-content">
       
       <!-- Main content -->
-
+      <app-album></app-album> 
       <!-- ------------ -->
       
       <div class="bottom-spacer"></div>
