--- a/web422-a4/src/app/new-releases/new-releases.component.html
+++ b/web422-a4/src/app/new-releases/new-releases.component.html
@@ -13,12 +13,12 @@
           <mat-card-subtitle>New Release</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image class="album-cover" [src]="album.images[0].url" alt="album art" 
-          routerLink="/album" routerLinkActive="active">
+        [routerLink]="['/album/'+item.id]" routerLinkActive="active">
         <strong>Release Date: </strong>{{album.release_date}}<br />
         <strong>Tracks: </strong>{{album.total_tracks}}<br /><br />
         <mat-card-content>
           <mat-chip-list aria-label="Artist selection">
-            <mat-chip routerLink="/artist" routerLinkActive="active" *ngFor="let artist of album.artists"
+            <mat-chip [routerLink]="['/artist/'+artist.id]" routerLinkActive="active" *ngFor="let artist of album.artists"
               >{{artist.name}}</mat-chip>
           </mat-chip-list>
         </mat-card-content>
