--- a/web422-a4/src/app/artist-discography/artist-discography.component.html
+++ b/web422-a4/src/app/artist-discography/artist-discography.component.html
@@ -23,7 +23,7 @@
 
       <img mat-card-image class="album-cover"
         [src]="album.images[0].url" alt="album art"
-        routerLink="/album" routerLinkActive="active">
+        [routerLink]="['/album/'+album.id]" routerLinkActive="active">
       <strong>Release Date: </strong>{{album.release_date}}<br />
       <strong>Tracks: </strong>{{album.total_tracks}}
     </mat-card>
