--- a/web422-a4/src/app/album/album.component.html
+++ b/web422-a4/src/app/album/album.component.html
@@ -1,5 +1,8 @@
 <h1>{{album.name}}</h1>
-<p>Full track listing for {{album.name}}<br><br></p>
+<p>Full track listing for {{album.name}}<br>
+	Click the <mat-icon mat-list-icon>queue_music</mat-icon> to add a song to your favourites list
+	<br><br>
+</p>
 <mat-card>
 	<mat-card-content fxLayout="row wrap" fxLayout.xs="column">
 		<div fxflex><img src={{album.images[1].url}} alt="album cover" [style.margin]="'10px'" [style.max-width]="'90%'" /></div>
@@ -12,7 +15,7 @@
 
 				<mat-chip-list aria-label="Artist selection">
 					<mat-chip *ngFor="let artist of album.artists" 
-						routerLink="/artist" routerLinkActive="active">{{artist.name}}</mat-chip>
+					[routerLink]="['/artist/'+artist.id]" routerLinkActive="active">{{artist.name}}</mat-chip>
 				</mat-chip-list>
 				<br />
 
@@ -27,12 +30,13 @@
 <mat-list>
 	<!-- Single "Responsive" Material List Item-->
 	<mat-list-item *ngFor="let track of album.tracks.items ">
-		<mat-icon mat-list-icon>queue_music</mat-icon>
+		<mat-icon mat-list-icon (click)="addToFavourites(item.id)">queue_music</mat-icon>
 		<div mat-line>
 			<mat-card>
 				<mat-card-content>{{track.track_number}}: {{track.name}} - {{(track.duration_ms/60000).toFixed(2)}}
 					<!-- NOTE 3.34 was determined by using (duration_ms / 60000).toFixed(2) -->
 				</mat-card-content>
+				<div *ngIf="track.preview_url"><br /><audio controls [src]="track.preview_url"></audio></div>
 			</mat-card>
 		</div>
 	</mat-list-item>
