--- a/web422-a4/src/app/search-result/search-result.component.html
+++ b/web422-a4/src/app/search-result/search-result.component.html
@@ -1,1 +1,29 @@
-<p>search-result works!</p>
+<h1>Results for: "{{searchQuery}}"</h1>
+<p>The following is a list of artists matching the query.<br />
+    Click the <strong>artist image</strong> for more information.</p>
+
+<br />
+
+<div class="content">
+    <div fxLayout="row wrap" fxLayout.xs="column">
+        <div *ngFor= "let artist of results">
+            <!-- single result "card"-->
+            <div fxFlex [style.margin]="'20px'">
+                <mat-card [style.min-width]="'200px'">
+                    <mat-card-header>
+                        <mat-card-title>{{artist.name}}</mat-card-title>
+                        <mat-card-subtitle>Artist</mat-card-subtitle>
+                    </mat-card-header>
+                    <div *ngIf= "artist.images">  
+                        <img routerLink="/artist/{{artist.id}}" mat-card-image class="album-cover" src="{{artist.images[2].url}}" alt="artist art">
+                    </div>
+                    <mat-card-content>
+                        <strong>Followers: </strong>{{artist.followers.total}}<br />
+                        <strong>Popularity: </strong>{{artist.popularity}}
+                    </mat-card-content>
+                </mat-card>
+            </div>
+            <!-- -->
+        </div>
+    </div>
+</div>
