--- a/web422-a4/src/app/app.component.html
+++ b/web422-a4/src/app/app.component.html
@@ -40,7 +40,7 @@
         <div>
           <mat-form-field appearance="fill">
             <mat-label>Artist</mat-label>
-            <input matInput type="text">
+            <form (ngSubmit)='handleSearch()'><input matInput type="text" name="searchString" [(ngModel)]='searchString'></form>
             <mat-icon matSuffix>search</mat-icon>
           </mat-form-field>
         </div>
@@ -53,7 +53,7 @@
           <p mat-line> New Releases </p>
         </a>
 
-        <a mat-list-item>
+        <a mat-list-item routerLink="/favourites" routerLinkActive="active">
           <mat-icon mat-list-icon>
             favorite
           </mat-icon>
