--- a/web422-a4/src/app/album/album.component.html
+++ b/web422-a4/src/app/album/album.component.html
@@ -13,9 +13,10 @@
 				<strong>Tracks:</strong> {{album.total_tracks}}<br />
 				<strong>Popularity: </strong>{{album.popularity}}<br /><br />
 
-				<mat-chip-list aria-label="Artist selection">
-					<mat-chip *ngFor="let artist of album.artists" 
-					[routerLink]="['/artist/'+artist.id]" routerLinkActive="active">{{artist.name}}</mat-chip>
+				<mat-chip-list *ngFor="let artist of album.artists" aria-label="Artist selection">
+					<a [routerLink]="['/artist/'+artist.id]">
+						<mat-chip>{{artist.name}}</mat-chip>
+					</a>
 				</mat-chip-list>
 				<br />
 
@@ -30,7 +31,7 @@
 <mat-list>
 	<!-- Single "Responsive" Material List Item-->
 	<mat-list-item *ngFor="let track of album.tracks.items ">
-		<mat-icon mat-list-icon (click)="addToFavourites(item.id)">queue_music</mat-icon>
+		<mat-icon mat-list-icon (click)="addToFavourites(track.id)">queue_music</mat-icon>
 		<div mat-line>
 			<mat-card>
 				<mat-card-content>{{track.track_number}}: {{track.name}} - {{(track.duration_ms/60000).toFixed(2)}}
