--- a/web422-a4/src/app/search-result/search-result.component.html
+++ b/web422-a4/src/app/search-result/search-result.component.html
@@ -6,9 +6,8 @@
 
 <div class="content">
     <div fxLayout="row wrap" fxLayout.xs="column">
-        <div *ngFor= "let artist of results">
             <!-- single result "card"-->
-            <div fxFlex [style.margin]="'20px'">
+            <div fxFlex [style.margin]="'20px'" *ngFor= "let artist of results">
                 <mat-card [style.min-width]="'200px'">
                     <mat-card-header>
                         <mat-card-title>{{artist.name}}</mat-card-title>
@@ -24,6 +23,5 @@
                 </mat-card>
             </div>
             <!-- -->
-        </div>
     </div>
 </div>
