--- a/web422-a4/src/app/album/album.component.html
+++ b/web422-a4/src/app/album/album.component.html
@@ -1,45 +1,47 @@
-<h1>{{album.name}}</h1>
-<p>Full track listing for {{album.name}}<br>
-	Click the <mat-icon mat-list-icon>queue_music</mat-icon> icon to <strong>add</strong> a song to your favourites list
-	<br><br>
-</p>
-<mat-card>
-	<mat-card-content fxLayout="row wrap" fxLayout.xs="column">
-		<div fxflex><img src={{album.images[1].url}} alt="album cover" [style.margin]="'10px'" [style.max-width]="'90%'" /></div>
-		<div fxFlex>
-			<div [style.min-width]="'300px'" [style.margin]="'10px'">
-				<strong>Record Label: </strong> {{album.label}}<br />
-				<strong>Release Date: </strong> {{album.release_date}}<br /><br />
-				<strong>Tracks:</strong> {{album.total_tracks}}<br />
-				<strong>Popularity: </strong>{{album.popularity}}<br /><br />
+<div *ngIf="album">
+	<h1>{{album.name}}</h1>
+	<p>Full track listing for {{album.name}}<br>
+		Click the <mat-icon mat-list-icon>queue_music</mat-icon> to <strong>add</strong> a song to your favourites list
+		<br><br>
+	</p>
+	<mat-card>
+		<mat-card-content fxLayout="row wrap" fxLayout.xs="column">
+			<div fxflex><img src={{album.images[1].url}} alt="album cover" [style.margin]="'10px'" [style.max-width]="'90%'" /></div>
+			<div fxFlex>
+				<div [style.min-width]="'300px'" [style.margin]="'10px'">
+					<strong>Record Label: </strong> {{album.label}}<br />
+					<strong>Release Date: </strong> {{album.release_date}}<br /><br />
+					<strong>Tracks:</strong> {{album.total_tracks}}<br />
+					<strong>Popularity: </strong>{{album.popularity}}<br /><br />
 
-				<mat-chip-list *ngFor="let artist of album.artists" aria-label="Artist selection">
-					<a [routerLink]="['/artist/'+artist.id]">
-						<mat-chip>{{artist.name}}</mat-chip>
-					</a>
-				</mat-chip-list>
-				<br />
+					<mat-chip-list *ngFor="let artist of album.artists" aria-label="Artist selection">
+						<a [routerLink]="['/artist/'+artist.id]">
+							<mat-chip>{{artist.name}}</mat-chip>
+						</a>
+					</mat-chip-list>
+					<br />
 
-				<div *ngFor="let copyright of album.copyrights">{{copyright.text}}</div>
+					<div *ngFor="let copyright of album.copyrights">{{copyright.text}}</div>
+				</div>
 			</div>
-		</div>
-	</mat-card-content>
-</mat-card>
-<br /><br />
-<h2>Track Listing</h2>
+		</mat-card-content>
+	</mat-card>
+	<br /><br />
+	<h2>Track Listing</h2>
 
-<mat-list>
-	<!-- Single "Responsive" Material List Item-->
-	<mat-list-item *ngFor="let track of album.tracks.items ">
-		<mat-icon mat-list-icon (click)="addToFavourites(track.id)">queue_music</mat-icon>
-		<div mat-line>
-			<mat-card>
-				<mat-card-content>{{track.track_number}}: {{track.name}} - {{(track.duration_ms/60000).toFixed(2)}}
-					<!-- NOTE 3.34 was determined by using (duration_ms / 60000).toFixed(2) -->
-				</mat-card-content>
-				<div *ngIf="track.preview_url"><audio controls [src]="track.preview_url"></audio></div>
-			</mat-card>
-		</div>
-	</mat-list-item>
-	<!-- -->
-</mat-list>
+	<mat-list>
+		<!-- Single "Responsive" Material List Item-->
+		<mat-list-item *ngFor="let track of album.tracks.items ">
+			<mat-icon mat-list-icon (click)="addToFavourites(track.id)">queue_music</mat-icon>
+			<div mat-line>
+				<mat-card>
+					<mat-card-content>{{track.track_number}}: {{track.name}} - {{(track.duration_ms/60000).toFixed(2)}}
+						<!-- NOTE 3.34 was determined by using (duration_ms / 60000).toFixed(2) -->
+					</mat-card-content>
+					<div *ngIf="track.preview_url"><audio controls [src]="track.preview_url"></audio></div>
+				</mat-card>
+			</div>
+		</mat-list-item>
+		<!-- -->
+	</mat-list>
+</div>
