--- a/web422-a4/src/app/favourites/favourites.component.html
+++ b/web422-a4/src/app/favourites/favourites.component.html
@@ -1,12 +1,13 @@
 <h1>Favourites</h1>
-<p>The following is a list of your favourite songs from various artists.<br /> Click the &nbsp;<mat-icon mat-list-icon>queue_music</mat-icon>&nbsp; icon to <strong>remove</strong> a song from your list </p>
+<p>The following is a list of your favourite songs from various artists.<br /> 
+    Click the &nbsp;<mat-icon mat-list-icon>queue_music</mat-icon>&nbsp; icon to <strong>remove</strong> a song from your list </p>
 
 <br />
 
 <mat-list>
 
     <!-- single "favourite" card -->
-    <mat-list-item *let track of favourites>
+    <mat-list-item *ngFor= "let track of favourites">
         <mat-icon mat-list-icon (click)="removeFromFavourites(track.id)">queue_music</mat-icon>
         <div mat-line>
             <mat-card>
