--- a/web422-a4/src/app/register/register.component.html
+++ b/web422-a4/src/app/register/register.component.html
@@ -1,1 +1,53 @@
-<p>register works!</p>
+<mat-card>
+    <mat-card-content>
+        <form (ngSubmit)="onSubmit()">
+            <h2>Register</h2>
+            <mat-error *ngIf="warning">{{warning}}</mat-error><br />
+            <mat-form-field class="full-width-input">
+                <input 
+                    matInput 
+                    placeholder="User Name" 
+                    name="username" 
+                    required 
+                    autofocus
+                    [(ngModel)]="registerUser.userName">
+                <mat-error>Please provide a valid user name</mat-error>
+            </mat-form-field><br />
+            <mat-form-field class="full-width-input">
+                <input 
+                    matInput 
+                    type="password" 
+                    placeholder="Password" 
+                    name="password" 
+                    required
+                    [(ngModel)]="registerUser.password">
+                <mat-error>Please provide a valid password</mat-error>
+            </mat-form-field><br />
+            <mat-form-field class="full-width-input">
+                <input 
+                    matInput type="password" 
+                    placeholder="Password" 
+                    name="password2" 
+                    required
+                    [(ngModel)]="registerUser.password2">
+                <mat-error>Please provide a valid password</mat-error>
+            </mat-form-field><br />
+            <button 
+                mat-raised-button 
+                color="primary" 
+                type="submit" 
+                [disabled]="loading">
+                <mat-icon>account_box</mat-icon>
+                <span *ngIf="loading; else register">&nbsp;&nbsp;&nbsp;Processing Request</span>
+                <ng-template #register>
+                    <span>&nbsp;&nbsp;&nbsp;Register</span>
+                </ng-template>
+            </button>
+        </form>
+    </mat-card-content>
+    <div class="success" *ngIf="success">Registration Successful. Proceed to<br /><br /> 
+        <a mat-raised-button color="accent" routerLink="/login">
+            <mat-icon>login</mat-icon>&nbsp;&nbsp;&nbsp;Login
+        </a> 
+    </div>
+</mat-card>
